# project-maestro

./: .env.example  .gitignore  README.md  README_DEVELOPMENT.md  pyproject.toml  pytest.ini  run_tests.py
.serena/: project.yml
.serena/memories/: code_style_conventions.md  langchain_implementation.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
claudedocs/: 01_Python_Fundamentals.md  02_Advanced_Python_Concepts.md  03_Project_Architecture_Analysis.md  04_Backend_Best_Practices.md  README.md
database/: run_migrations.py
database/migrations/: 001_add_pgvector_support.sql
docs/: ai_engineer_interview_guide.md  conversation_memory_system.md  enterprise_features.md  frontend_roadmap_addition.md  implementation_validation_summary.md  langgraph_implementation_guide.md  next_generation_features_master_plan.md  phase3_implementation_report.md  rag_implementation_guide.md  roadmap_implementation_guide.md  technical_overview.md  tier1_features_detailed_design.md  tier2_features_detailed_design.md  tier3_features_detailed_design.md
examples/: enterprise_config.env
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.scss  App.tsx
frontend/src/components/dashboard/: WorkflowMonitor.scss  WorkflowMonitor.tsx
frontend/src/components/layout/: AppLayout.scss  AppLayout.tsx
frontend/src/components/prompt/: PromptInterface.scss  PromptInterface.tsx
frontend/src/components/visualization/: AgentFlowDiagram.scss  AgentFlowDiagram.tsx
frontend/src/hooks/: useWebSocket.ts  useWorkflowAPI.ts
frontend/src/pages/: AnalyticsPage.scss  AnalyticsPage.tsx  HomePage.scss  HomePage.tsx  SettingsPage.tsx  WorkflowPage.scss  WorkflowPage.tsx
frontend/src/setup/: carbon-theme.ts
frontend/src/types/: index.ts
scripts/: validate_advanced_features.py
src/project_maestro/: __init__.py  cli.py
src/project_maestro/agents/: builder_agent.py  canvas_agent.py  codex_agent.py  labyrinth_agent.py  orchestrator.py  query_agent.py  sonata_agent.py
src/project_maestro/api/: __init__.py  main.py  models.py  websocket_manager.py
src/project_maestro/api/endpoints/: __init__.py  advanced_features.py  agents.py  analytics.py  assets.py  builds.py  cache.py  conversations.py  events.py  observability.py  privacy.py  projects.py  streaming.py  websocket.py
src/project_maestro/core/: adaptive_rag.py  advanced_visualization.py  agent_collaboration.py  agent_framework.py  agent_profiler.py  config.py  conversation_memory.py  distributed_workflow.py  error_handling.py  gdd_parser.py  intelligent_cache.py  intent_classifier.py  langgraph_orchestrator.py  logging.py  memory_aware_agent.py  memory_optimizer.py  message_queue.py  metrics.py  monitoring.py  observable_orchestrator.py  privacy_policy.py  rag_system.py  storage.py  streaming_handler.py
src/project_maestro/integrations/: enterprise_connectors.py
src/project_maestro/scripts/: validate_enterprise_setup.py
tests/: conftest.py  test_agent_framework.py  test_api.py  test_conversation_memory.py  test_enterprise_features.py  test_gdd_parser.py  test_monitoring.py
tests/integration/: test_advanced_features.py
